# news

./: .gitignore  Cargo.toml  LICENSE  README.md  build
.cargo/: config.toml
src/: lib.rs  main.rs
src/args/: mod.rs
src/lang/: mod.rs
src/news/: link.rs
src/page/: markdown.rs  mod.rs  render.rs  skin.rs  view.rs
src/scrape/: ia.rs  issues.rs  link.rs  mod.rs
src/scrape/issues/: cpp.rs  go.rs  javascript.rs  mod.rs  php.rs  python.rs  rust.rs
src/tui/: menu.rs  mod.rs  select.rs
src/utils/: clipboard.rs  config.rs  constants.rs  mod.rs
tests/: javascript.rs  rust.rs
tests/integration/: rust.rs
