[package]
name = "news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
clap = "4.1.8"
crabquery = "0.1.9"
reqwest = "0.11.14"
terminal-spinners = "0.3.2"
tokio = { version = "1", features = ["full"] }
webbrowser = "0.8.7"
inquire = "0.5.3"
html2text = "0.4.5"
termimad = "0.21.1"
