[package]
name = "news"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
clap = "4.1.8"
crabquery = "0.1.9"
#reqwest = "0.11.14"
reqwest = { version = "0.11.14", features = ["blocking"] }

terminal-spinners = "0.3.2"
#tokio = { version = "1", features = ["full"] }
webbrowser = "0.8.7"
inquire = "0.5.3"
html2text = "0.4.5"
scraper = "0.15.0"
serde_json = { version = "1.0" }
serde_derive = "1.0.114"
serde = "1.0.114"
termimad = "0.21.1"
cli-clipboard = "0.4.0"
toml = "0.5.2"
august = "^2.4"

[target.'cfg(target_arch = "amd64")']


[profile.release]
#strip = true
opt-level = "s"
lto = true
codegen-units = 1
