[package]
name = "news_cli"
version = "1.3.2"
edition = "2021"
description = "A CLI to see developer news in the terminal 🐢"
license = "MIT"
categories = ["command-line-utilities"]
repository = "https://github.com/atticus64/news"
authors = ["Jonathan <jonaenglish64@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
scraper = "0.16"
clap = "4.1.8"
crabquery = "0.1.9"
terminal-spinners = "0.3.2"
webbrowser = "0.8.7"
inquire = "0.5.2"
termimad = "0.23.0"
json = "0.12.4"
nanohtml2text = "0.1.4"
ureq = "2.6.2"
dirs = "5.0.0"

[target.'cfg(target_arch = "amd64")']


[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1


[[bin]]
name = "news"
path = "src/main.rs"
